added footer and chnages payment number

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -427,19 +427,19 @@
                     <div class="row g-4 mt-4 animate-fade-in" style="animation-delay: 1s;">
                         <div class="col-6 col-md-3">
                             <div class="stat-card">
-                                <div class="stat-number">500+</div>
+                                <div class="stat-number">32+</div>
                                 <p class="text-light mb-0">Players</p>
                             </div>
                         </div>
                         <div class="col-6 col-md-3">
                             <div class="stat-card">
-                                <div class="stat-number">1000+</div>
+                                <div class="stat-number">50+</div>
                                 <p class="text-light mb-0">Matches</p>
                             </div>
                         </div>
                         <div class="col-6 col-md-3">
                             <div class="stat-card">
-                                <div class="stat-number">50K+</div>
+                                <div class="stat-number">4K</div>
                                 <p class="text-light mb-0">Prize Pool</p>
                             </div>
                         </div>
